# aider-bridge

./: .gitattributes  .gitignore  LICENSE  QUICKSTART.txt  README.md  pyproject.toml  setup.py
aider_bridge/: __init__.py  api_server.py  cli.py
api-server/: requirements.txt
docs/: SETUP.md
extension/: content.js  draggable-button.css  draggable-button.js  manifest.json  popup.html  popup.js
scripts/: start-api.bat  start-api.ps1
