[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aider-bridge"
version = "0.1.0"
description = "Browser extension + API server for Claude/Perplexity integration with Aider"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]

dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
aider-bridge-start = "aider_bridge.cli:start_server"